--- a/pyproject.toml.jinja
+++ b/pyproject.toml.jinja
@@ -3,7 +3,10 @@ name = "{{ project_slug }}"
 version = "0.0.1"
 description = "{{ project_name }}"
 authors = ["{{ author }} <{{ author_email }}>"]
-packages = [{ include = "app", from="src" }]
+packages = [
+    { include = "app", from = "src" },
+    { include = "worker", from = "src" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -26,7 +29,7 @@ fastapi-async-sqlalchemy = "^0.6.1"
 
 [tool.poetry.group.worker.dependencies]
 uvloop = "^0.19.0"
-arq = "^0.25.0"
+arq = "^0.26.0"
 
 
 [tool.poetry.group.dev.dependencies]
